Fix horizontal scroll problem

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
     height: -webkit-fill-available;
+    width: 100vw;
 }
 body {
     padding: 0%;
@@ -9,6 +10,8 @@ body {
     justify-content: center;
     align-items: center;
     width: 100vw;
+    right: 0px;
+    overflow-x: hidden;
     background: rgb(58,137,138);
     background: radial-gradient(circle, rgba(58,137,138,1) 5%, rgba(24,195,199,1) 76%);
 }
